--- a/about.html
+++ b/about.html
@@ -50,24 +50,27 @@
                         </div>
                         <div class="mt-3">
                             <a class="btn background-button m-1 rounded-3 p-2"
-                                href="https://github.com/MaximeRichard78/2CSSF" role="button"><img
+                                href="https://github.com/MaximeRichard78/2CSSF" target="_blank" role="button"><img
                                     src="./Image/github-svgrepo-com 1.svg" alt="logo git"></a>
-                            <a class="btn background-button m-1 rounded-3 p-2" href="#" role="button"><img
-                                    src="./Image/linkedin-svgrepo-com 1.svg" alt="logo linkedin"></a>
-                            <a class="btn background-button m-1 rounded-3 p-2" href="#" role="button"><img
-                                    src="./Image/twitter-154-svgrepo-com 1.svg" alt="logo twitter"></a>
-                            <a class="btn background-button m-1 rounded-3 p-2" href="#" role="button"><img
-                                    src="./Image/stackoverflow-svgrepo-com 1.svg" alt="logo stackoverflow"></a>
+                            <a class="btn background-button m-1 rounded-3 p-2" href="https://fr.linkedin.com/"
+                                target="_blank" role="button"><img src="./Image/linkedin-svgrepo-com 1.svg"
+                                    alt="logo linkedin"></a>
+                            <a class="btn background-button m-1 rounded-3 p-2" href="https://twitter.com/?lang=fr"
+                                target="_blank" role="button"><img src="./Image/twitter-154-svgrepo-com 1.svg"
+                                    alt="logo twitter"></a>
+                            <a class="btn background-button m-1 rounded-3 p-2" href="https://stackoverflow.com/"
+                                target="_blank" role="button"><img src="./Image/stackoverflow-svgrepo-com 1.svg"
+                                    alt="logo stackoverflow"></a>
                             <div class="mt-2">
-                                <a class="btn background-button m-1 rounded-3 p-2" href="#" role="button"><img
-                                        src="./Image/figma-svgrepo-com 1.svg" alt="logo figma"></a>
-                                <a class="btn background-button m-1 rounded-3 p-2" href="#" role="button"><img
+                                <a class="btn background-button m-1 rounded-3 p-2" href="https://www.figma.com/"
+                                    target="_blank" role="button"><img src="./Image/figma-svgrepo-com 1.svg"
+                                        alt="logo figma"></a>
+                                <a class="btn background-button m-1 rounded-3 p-2" href="https://dribbble.com/"
+                                    target="_blank" role="button"><img
                                         src="./Image/dribbble-dribble-dribbbble-svgrepo-com 1.svg"
                                         alt="logo dibbble"></a>
                             </div>
                         </div>
-
-
                     </div>
                     <div class="col-lg padding-col text-center">
                         <h1 class="pb-5 text-start">About me</h1>
