--- a/aboutthispage.html
+++ b/aboutthispage.html
@@ -2,69 +2,70 @@
 <html lang="fr-FR">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./Style/style.css">
-    <title>Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="./Style/style.css">
+  <title>Portfolio</title>
 </head>
 
 <body class="text-white">
-    <div class="container ms-0 me-0">
-      <div class="row">
-        <menu class="col-3 vh-100 text-center mb-0 pt-4">
-          <div class="d-flex flex-column justify-content-between h-100">
-            <div>
-              <img src="./Image/SD logo.png" alt="logo SD">
-              <ul class="nav flex-column">
-                <li class="nav-item">
-                  <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img
-                      src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img
-                      src="./Image/address-card-solid 1.svg" class="pe-3" alt="icone carte d'identité">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link p-2 mb-2 text-start text-white" href="./work.html"><img
-                      src="./Image/briefcase-solid 1.svg" class="pe-3" alt="icone malette">Work</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4" href="./aboutthispage.html"><img
-                      src="./Image/circle-info-solid 1.svg" class="pe-3" alt="icone info">About this page</a>
-                </li>
-              </ul>
-            </div>
-            <footer>
-              <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
-            </footer>
-            </menu>
-            <div class="col padding-body text-center">
-                <h1 class="mt-2 pb-5">About this page</h1>
-                <div class="pt-4">
-                    <p>This page was designed and built by me.</p>
-                    <p>I always enjoy constructive feedback, positive or negative, and improving my products based on
-                        that. This is no exception, so feel free to use the links bellow.</p>
-                    <p>The idea is to keep it as minimal as possible without missing on content.</p>
-                </div>
-                <div class="my-5 py-5">
-                    <a class="btn background-button me-1 rounded-3 p-2" href="https://github.com/MaximeRichard78/2CSSF"
-                        role="button"><img src="./Image/github-svgrepo-com 1.svg" alt="logo git"></a>
-                    <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
-                            src="./Image/figma-svgrepo-com 1.svg" alt="logo figma"></a>
-                    <a class="btn background-button me-1 rounded-3 p-2" href="#" role="button"><img
-                            src="./Image/dribbble-dribble-dribbbble-svgrepo-com 1.svg" alt="logo dibbble"></a>
-                </div>
-                <footer>
-                    <a class="btn background-button me-1 rounded-3 p-2 text-green" href="#" role="button">Sponsor me on GitHub</a>
-                </footer>
-            </div>
+  <div class="container ms-0 me-0">
+    <div class="row">
+      <menu class="col-3 vh-100 text-center mb-0 pt-4">
+        <div class="d-flex flex-column justify-content-between h-100">
+          <div>
+            <img src="./Image/SD logo.png" alt="logo SD">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link p-2 mb-2 text-start text-white" href="./index.html"><img
+                    src="./Image/house-solid 1.svg" class="pe-3" alt="icone maison">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-2 mb-2 text-start text-white" href="./about.html"><img
+                    src="./Image/address-card-solid 1.svg" class="pe-3" alt="icone carte d'identité">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-2 mb-2 text-start text-white" href="./work.html"><img
+                    src="./Image/briefcase-solid 1.svg" class="pe-3" alt="icone malette">Work</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link p-2 mb-2 text-start text-white background-nav rounded-4"
+                  href="./aboutthispage.html"><img src="./Image/circle-info-solid 1.svg" class="pe-3"
+                    alt="icone info">About this page</a>
+              </li>
+            </ul>
+          </div>
+          <footer>
+            <p class="text-light opacity-25">2023 © Stratis Dermanoutsos</p>
+          </footer>
+      </menu>
+      <div class="col padding-body text-center">
+        <h1 class="mt-2 pb-5">About this page</h1>
+        <div class="pt-4">
+          <p>This page was designed and built by me.</p>
+          <p>I always enjoy constructive feedback, positive or negative, and improving my products based on
+            that. This is no exception, so feel free to use the links bellow.</p>
+          <p>The idea is to keep it as minimal as possible without missing on content.</p>
         </div>
+        <div class="my-5 py-5">
+          <a class="btn background-button me-1 rounded-3 p-2" href="https://github.com/MaximeRichard78/2CSSF"
+            target="_blank" role="button"><img src="./Image/github-svgrepo-com 1.svg" alt="logo git"></a>
+          <a class="btn background-button me-1 rounded-3 p-2" href="https://www.figma.com/" target="_blank"
+            role="button"><img src="./Image/figma-svgrepo-com 1.svg" alt="logo figma"></a>
+          <a class="btn background-button me-1 rounded-3 p-2" href="https://dribbble.com/" target="_blank"
+            role="button"><img src="./Image/dribbble-dribble-dribbbble-svgrepo-com 1.svg" alt="logo dibbble"></a>
+        </div>
+        <footer>
+          <a class="btn background-button me-1 rounded-3 p-2 text-green" href="#" target="_blank" role="button">Sponsor
+            me on GitHub</a>
+        </footer>
+      </div>
     </div>
+  </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+  integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </html>
