--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
               <p class="pt-3 px-4">or</p>
               <hr class="col">
             </div>
-            <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.fiverr.com/" role="button"><img
-                src="./Image/fiverr-svgrepo-com 1.svg" alt="logo fiverr"></a>
-            <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.linkedin.com/" role="button"><img
-                src="./Image/linkedin-svgrepo-com 1.svg" alt="logo linkedin"></a>
-            <a class="btn background-button me-1 rounded-3 p-2" href="https://www.upwork.com/" role="button"><img
-                src="./Image/upwork-svgrepo-com 1.svg" alt="logo upwork"></a>
-            <a class="btn background-button rounded-3 p-2" href="https://www.fr.freelancer.com/" role="button"><img
-                src="./Image/freelancer-svgrepo-com 1.svg" alt="logo freelancer"></a>
+            <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.fiverr.com/" target="_blank"
+              role="button"><img src="./Image/fiverr-svgrepo-com 1.svg" alt="logo fiverr"></a>
+            <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.linkedin.com/" target="_blank"
+              role="button"><img src="./Image/linkedin-svgrepo-com 1.svg" alt="logo linkedin"></a>
+            <a class="btn background-button me-1 rounded-3 p-2" href="https://www.upwork.com/" target="_blank"
+              role="button"><img src="./Image/upwork-svgrepo-com 1.svg" alt="logo upwork"></a>
+            <a class="btn background-button rounded-3 p-2" href="https://www.fr.freelancer.com/" target="_blank"
+              role="button"><img src="./Image/freelancer-svgrepo-com 1.svg" alt="logo freelancer"></a>
           </div>
         </div>
       </div>
