--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
 <body class="text-white">
     <div class="container ms-0 me-0">
         <div class="row">
-            <menu class="col-3 vh-100 text-center mb-0 pt-4">
+            <menu class="col-3 vh-100 text-center mb-0 pt-4     ">
                 <div class="d-flex flex-column justify-content-between h-100">
                     <div>
                         <img src="./Image/SD logo.png" alt="logo SD">
@@ -56,13 +56,13 @@
                     <div class="col-2"></div>
                 </div>
                 <div class="pb-5">
-                    <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.fiverr.com/" role="button"><img
-                            src="./Image/fiverr-svgrepo-com 1.svg" alt="logo fiverr"></a>
-                    <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.linkedin.com/"
+                    <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.fiverr.com/" target="_blank"
+                        role="button"><img src="./Image/fiverr-svgrepo-com 1.svg" alt="logo fiverr"></a>
+                    <a class="btn background-button me-1 rounded-3 p-2" href="https://fr.linkedin.com/" target="_blank"
                         role="button"><img src="./Image/linkedin-svgrepo-com 1.svg" alt="logo linkedin"></a>
-                    <a class="btn background-button me-1 rounded-3 p-2" href="https://www.upwork.com/"
+                    <a class="btn background-button me-1 rounded-3 p-2" href="https://www.upwork.com/" target="_blank"
                         role="button"><img src="./Image/upwork-svgrepo-com 1.svg" alt="logo upwork"></a>
-                    <a class="btn background-button rounded-3 p-2" href="https://www.fr.freelancer.com/"
+                    <a class="btn background-button rounded-3 p-2" href="https://www.fr.freelancer.com/" target="_blank"
                         role="button"><img src="./Image/freelancer-svgrepo-com 1.svg" alt="logo freelancer"></a>
                 </div>
                 <h1 class="pt-5 pb-4">My experience so far</h1>
